fixes for broken styles, view full calendar button as well

--- a/app/assets/stylesheets/portal/fulfillment.css.sass
+++ b/app/assets/stylesheets/portal/fulfillment.css.sass
@@ -166,7 +166,6 @@
 // The rest
 // ------------------------------------------------>
 #fulfillment
-  background-color: #EEE
   margin: 10px auto
 
   ul
